# CS50sql-Problem-Sets

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.ipynb
Problem Sets/ps0/: 0_all solutions_cyberchase.ipynb
databases/: longlist0.db
week 0/: 00_Querying.ipynb  p1_all_solutions_cyberchase.ipynb  p2_all_solutions_36_views.ipynb
week 0/36_Views/: 2.sql  9.sql
week 0/Cyberchase/: 1.sql  10.sql  6.sql  8.sql  9.sql
week 0/Players/: 1.sql  5.sql  6.sql  9.sql
week 1/: 01_relating.ipynb  p1_all_solutions_packages.ipynb  p2_all_solutions_DESE.ipynb  p3 q  p3_all_solutions_moneyball.ipynb
week 1/dese/: 10.sql  11.sql  12.sql  13.sql  2.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql
week 1/moneyball/: 10.sql  11.sql  12.sql  2.sql  3.sql  4.sql  6.sql  7.sql  8.sql  9.sql
week 2/: 02_designing.ipynb  mbta.db  schema.sql
week 2/atl/: atl.db  schema.sql
week 2/donuts/: donuts.db  schema.sql
week 2/happy-to-connect/: connect.db  schema.sql
week 3/: 03_writing.ipynb  mfa.db  mfa0.db  mfa1.db  mfa2.db  schema.sql  schema1.sql  votes.db
week 3/dont-panic/: dont-panic.db  hack.sql  p1_all_solutions_dont_panic.ipynb
week 3/meteorites/: import.sql  meteorites.db  p2_all_solutions_meteorites.ipynb
week 4/: 4_viewing.ipynb  mfa.db  p1_all_solutions_census.ipynb  p2_all_solutions_private.ipynb  p3_all_solutions_bnb.ipynb  rideshare.db
week 4/bnb/: available.sql  frequently_reviewed.sql  june_vacancies.sql  no_descriptions.sql  one_bedrooms.sql
week 4/census/: census.db
week 4/private/: private.db  (+1 more)
week0/: 00_Querying.ipynb
(+15 files in other folders)
